# ModelContextProtocl

./: README.md
cplusplus-sdk/: ReadMe.txt  mcp.proto  mcp_service.proto
cplusplus-sdk/demo/: CMakeLists.txt  Makefile  build.sh
cplusplus-sdk/demo/src/: client.cpp  server.cpp
cplusplus-sdk/pb/: mcp.grpc.pb.cc  mcp.grpc.pb.h  mcp.pb.cc  mcp.pb.h  mcp_service.grpc.pb.cc  mcp_service.grpc.pb.h  mcp_service.pb.cc  mcp_service.pb.h
cplusplus-sdk/services/: Makefile  host-bin  mcp-client-bin  mcp-server-bin
cplusplus-sdk/services/host/src/: host.cpp
cplusplus-sdk/services/mcp_client/: mcp_client
cplusplus-sdk/services/mcp_client/src/: mcp_client.cpp
cplusplus-sdk/services/mcp_server/src/: mcp_server.cpp
mcp_demo_client/: Makefile  local_file_example.cpp  mcp_client.hpp  schema.hpp
mcp_quicktype_client/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  amap_example.cpp  build.sh  build_local_example.sh  filesystem_example.cpp  main.cpp  mcp_client.cpp  test_build.sh
mcp_quicktype_client/data/: config.json
